<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/loginTitle"
        android:layout_below="@id/loginLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/brown"
        android:text="@string/loginTitle"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/jost"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmail"
        android:layout_below="@id/loginTitle"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/textInputEmail">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEmailValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jost"
            android:textColor="@color/brown"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassword"
        android:layout_below="@id/textInputEmail"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/textInputPassword"
        app:endIconMode="password_toggle">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPasswordValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jost"
            android:textColor="@color/brown"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/containerRememberAndForget"
        android:layout_below="@id/textInputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <CheckBox
            android:id="@+id/rememberMeCheckBox"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:textColor="@color/brown"
            android:layout_height="wrap_content"
            android:text="@string/rememberMe"
            android:fontFamily="@font/jost"
            />
        <TextView
            android:id="@+id/forgotPassword"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/brown"
            android:fontFamily="@font/jost"
            android:text="@string/forgotPassword"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_below="@id/containerRememberAndForget"
        android:id="@+id/btnLogIn"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:textColor="@color/brown"
        android:background="@color/orange"
        android:text="@string/logIn"
        />

    <LinearLayout
        android:id="@+id/containerDontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogIn"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/brown"
            android:fontFamily="@font/jost"
            android:text="@string/dontHaveAccount"
            android:layout_marginEnd="6sp"/>

        <TextView
            android:id="@+id/gotoSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:textColor="@color/orange"
            android:fontFamily="@font/jost"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/lineOr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/containerDontHaveAccount"
        android:gravity="center"
        android:layout_marginTop="20dp"
        >

        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="170dp"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:background="@color/material_dynamic_neutral70"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/or"
            android:layout_toEndOf="@id/line1"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:textColor="@color/material_dynamic_neutral70"
            android:text="@string/or"/>

        <LinearLayout
            android:id="@+id/line2"
            android:layout_toEndOf="@id/or"
            android:layout_centerVertical="true"
            android:layout_width="170dp"
            android:layout_height="1dp"
            android:background="@color/material_dynamic_neutral70"
            android:orientation="horizontal" />

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogInWithGoogle"
        android:layout_marginTop="20dp"
        android:layout_below="@id/lineOr"
        android:layout_width="match_parent"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        app:cornerRadius="0dp"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:textColor="@color/brown"
        android:text="@string/log_in_with_google"
        app:icon="@drawable/logo_google"
        />

</RelativeLayout>