<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <ScrollView
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/loginLogo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/logo"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/loginTitle"
                android:layout_below="@id/loginLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/brown"
                android:text="@string/signupTitle"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/jost"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                android:layout_below="@id/loginTitle"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textInputEmail">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEmailValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jost"
                    android:textColor="@color/brown"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                android:layout_below="@id/textInputEmail"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textInputPassword"
                app:endIconMode="password_toggle">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPasswordValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jost"
                    android:textColor="@color/brown"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputConfirmPassword"
                android:layout_below="@id/textInputPassword"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textInputConfirmPassword"
                app:endIconMode="password_toggle">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputConfirmPasswordValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jost"
                    android:textColor="@color/brown"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:layout_below="@id/textInputConfirmPassword"
                android:layout_marginTop="20dp"
                android:id="@+id/btnSignUp"
                style="@style/Widget.Material3.Button"
                android:layout_width="match_parent"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:textColor="@color/brown"
                android:background="@color/orange"
                android:text="@string/signUp"
                />

            <LinearLayout
                android:id="@+id/containerDontHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnSignUp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/brown"
                    android:fontFamily="@font/jost"
                    android:text="@string/already_have_an_account"
                    android:layout_marginEnd="6sp"/>

                <TextView
                    android:id="@+id/gotoLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logIn"
                    android:textColor="@color/orange"
                    android:fontFamily="@font/jost"/>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/lineOr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/containerDontHaveAccount"
                android:gravity="center"
                android:layout_marginTop="20dp"
                >

                <View
                    android:id="@+id/line1"
                    android:layout_width="170dp"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:background="@color/material_dynamic_neutral70"/>

                <TextView
                    android:id="@+id/or"
                    android:layout_toEndOf="@id/line1"
                    android:layout_width="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:textColor="@color/material_dynamic_neutral70"
                    android:text="@string/or"/>

                <View
                    android:id="@+id/line2"
                    android:layout_toEndOf="@id/or"
                    android:layout_centerVertical="true"
                    android:layout_width="170dp"
                    android:layout_height="1dp"
                    android:background="@color/material_dynamic_neutral70"/>

            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogInWithGoogle"
                android:layout_marginTop="20dp"
                android:layout_below="@id/lineOr"
                android:layout_width="match_parent"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                app:cornerRadius="0dp"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                android:textColor="@color/brown"
                android:text="@string/sign_up_with_google"
                app:icon="@drawable/logo_google"
                />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>